src/objects/Request__c.object
<CustomObject>
    <description>Used to manage and track requests from RWE customers</description>
    <fields>
        <fullName>Application_of_Deliverable__c</fullName>
        <inlineHelpText>The relative business need/value for service provided</inlineHelpText>
        <label>Application of Deliverable</label>
        <picklist>
            <picklistValues>
                <fullName>External Regulatory / Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Scientific / Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility Internal Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE Study Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <inlineHelpText>Business unit that is funding the activity or research study</inlineHelpText>
        <label>Business Unit (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Biomedicines (LBM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes (DBU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology (OBU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Business Unit Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Data_Asset_Contract_Review_s__c</fullName>
        <inlineHelpText>Please review the contract associated with this RWE Data Asset, which can be found in the Notes &amp; Attachments section of the RWE Data Asset record</inlineHelpText>
        <label>Completed Data Asset Contract Review(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consult_Type__c</fullName>
        <label>Consult Type</label>
        <picklist>
            <picklistValues>
                <fullName>FDAMA114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MQS/Procedure Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistical Methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Design</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Resource_Effort__c</fullName>
        <label>Consultant Resource Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Brief (conversations w/o draft review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term (1-3 meetings including draft review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term (&gt;3 meetings including draft review)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Completion_Date__c</fullName>
        <inlineHelpText>Date contract review was completed</inlineHelpText>
        <label>Contract Review Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_s_Leading_Candidate_s__c</fullName>
        <label>Customer&apos;s Leading Candidate(s)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Assets__c</fullName>
        <label>Data Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Request description and relevant information</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPERT_Recommendation__c</fullName>
        <label>EXPERT Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Pending - Major Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete - Moderate Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete - Minor or No Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EXPERT_Review_Type__c</fullName>
        <label>EXPERT Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Review - Resubmit Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FDAMA_Review_Cycle__c</fullName>
        <inlineHelpText>Only required if this is a FDAMA Review</inlineHelpText>
        <label>FDAMA Review Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Competent &amp; Reliable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <inlineHelpText>Summary of request output</inlineHelpText>
        <label>Final Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Molecule_s__c</fullName>
        <label>Molecule(s)</label>
        <picklist>
            <controllingField>Therapeutic_Area_Primary__c</controllingField>
            <picklistValues>
                <fullName>Abemaciclib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atomoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAFF-17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baricitinib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basal insulin peglispro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blosozumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cetuximab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGRP MAb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chk1 inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c-Met inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cMet-Mab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXCR4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1PAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulaglutide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duloxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edivoxetine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empagliflozin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evacetripib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exenatide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferroportin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGF receptor inh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florbetapir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galunisertib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gemcitabine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucagon-R antagonist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSK3-beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedgehog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepcidin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humulin U-100</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Exploration_Initiator__c</fullName>
        <label>Partnership Exploration Initiator</label>
        <picklist>
            <picklistValues>
                <fullName>Lilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Lead__c</fullName>
        <label>Partnership Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Sponsor__c</fullName>
        <label>RWE Partnership Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>RWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWE Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>RWE Partnership Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluated and Not Pursued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <inlineHelpText>Suggested completion date of request or response</inlineHelpText>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rationale_for_Process_Exception__c</fullName>
        <label>Rationale for Process Exception</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Geographic region that the research study or data source represents.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada/Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global (Multiple Regions)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>The status of the request</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Functional_Area__c</fullName>
        <description>This is done as we cannot look up this information on the User record</description>
        <inlineHelpText>Functional area of the requestor</inlineHelpText>
        <label>Requestor Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>CDIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCOVERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPORWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Research_FDAMA114_Eligible__c</fullName>
        <label>Research FDAMA114 Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requestor email notification preference (on submit)</inlineHelpText>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Alias_Project_ID__c</fullName>
        <inlineHelpText>Study Identifier i.e. Study Alias/BCM/BoB ID or IMPACT #</inlineHelpText>
        <label>Study ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Category__c</fullName>
        <label>Study Category</label>
        <picklist>
            <picklistValues>
                <fullName>Comparative Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Objective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Safety/Comparative Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Safety and Effectiveness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Design_Type__c</fullName>
        <label>Study Type</label>
        <picklist>
            <picklistValues>
                <fullName>PMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pragmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Observational Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Observational Studies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Customized__c</fullName>
        <label>Term Sheet Customized</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <description>Disease state that is involved in the research project or would be served by the data asset</description>
        <inlineHelpText>Disease state that is involved in the research study or would be served by the data asset</inlineHelpText>
        <label>Therapeutic Area (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>Cardio Metabolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuroscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology and Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell and Gene Therapy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Partner__c</fullName>
        <label>Type of Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Academic medical center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare IT/Informatics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated health system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient advocacy group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy benefit manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_Makes_It_Unique__c</fullName>
        <label>What Makes It Unique</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>RWE Req</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RWE Reqs</pluralLabel>
    <recordTypes>
        <fullName>Data_Sourcing</fullName>
        <active>true</active>
        <description>Consultation to identify and assess Real World data assets for research.</description>
        <label>RWE Data Sourcing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Datamart_Scientific_Consultation</fullName>
        <active>true</active>
        <description>Provides scientific data knowledge to enable study design and execution (includes contributing to protocols/SAP, requirements development and interpretation of results)</description>
        <label>Datamart Scientific Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Exception</fullName>
        <active>true</active>
        <description>This Quality System required tool is used to document the rationale for not accepting all key comments noted in an EXPERT review or for protocols and protocol amendments that do not require EXPERT review as determined by the medical/functional director</description>
        <label>EXPERT Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Review</fullName>
        <active>true</active>
        <description>Scientific review and evaluation of observational study designs (Quality System required)</description>
        <label>EXPERT Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_Workstream</fullName>
        <active>true</active>
        <description>Submit a proposed workstream to research new methods &amp; analytic capabilities to address gaps</description>
        <label>EXPERT Workstream</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPERT_or_ACT_Consultation</fullName>
        <active>true</active>
        <description>Scientific advice and expertise on study ideas, appropriate outcomes and their measures, analytical methods, etc.</description>
        <label>EXPERT or ACT Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Real_World_Data_Access</fullName>
        <active>true</active>
        <description>Provides secure access to data sets and tools to perform analyses</description>
        <label>Data Mart Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Real_World_Data_Analysis</fullName>
        <active>true</active>
        <description>Consultation, feasibility, design and execution of Data Mart studies.</description>
        <label>Data Mart Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWD_Technical_AssessmentorEvaluation</fullName>
        <active>true</active>
        <description>Provides technical assessment or evaluation of potential data assets to determining the feasibility of acquiring or using a particular data set</description>
        <label>RWD Technical Assessment or Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Partnership_Exploration</fullName>
        <active>true</active>
        <description>Initiate the exploration of a new RWE partnership between and an external organization</description>
        <label>RWE Partnership Exploration</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Strategic_Consultation</fullName>
        <active>true</active>
        <description>Consultation on leveraging RWE, Inc. services and Real World Data in research plan development and execution.</description>
        <label>RWE Strategic Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_World_Analytics_Assessment</fullName>
        <active>true</active>
        <description>Initiate an assessment of the analytics capabilities of a potential RWE partner</description>
        <label>Real World Analytics Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_World_Data_Load</fullName>
        <active>true</active>
        <description>Provides data loading  new database or a refresh of an existing database to make available within system(s) in the specified usable format(s)</description>
        <label>RWD Data Load and/or Technical Assessment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PANG_Valid_Req_EXPERT_Work</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_Workstream&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK( Workstream_Problem_Statement__c  ), ISBLANK(  Workstream_Deliverables__c ), ISBLANK(  Final_Outcome__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Workstream Deliverables, Workstream Problem Statement, and Final Outcome  need to be filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Expert_Review</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;EXPERT_Review&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK(Text(  Therapeutic_Area_Primary__c ) ),  ISBLANK(Text(  Study_Design_Type__c ) ),  ISBLANK(Text(Requestor_Functional_Area__c )  ), ISBLANK(    Study_Alias_Project_ID__c), ISBLANK(Text(EXPERT_Recommendation__c   ))) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Primary Therapeutic Area, Study Type, Requestor Functional area,  Study Alias / Study ID,  and EXPERT Recommendation are needed to b filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Int_Real_World_Data_Acc</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;Internal_Real_World_Data_Access&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ), ISBLANK(Text(  Access_Type__c) ),ISBLANK( Text(Role__c ) ),ISBLANK( Date_Completed__c  ) ,ISBLANK( Text( Completed_Data_Asset_Contract_Review_s__c ) ),ISBLANK( Text( Approval_Status__c )  ), ISBLANK( Access_Location__c  )) )</errorConditionFormula>
        <errorMessage>(Request Name, Requestor, Access Type, Role, Completed Date, Completed Contract Reviews, Access Location, and Approval Status must be filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Int_Real_World_Data_Ana</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;Internal_Real_World_Data_Analysis&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ), ISBLANK( Text(Application_of_Deliverable__c ) ),  ISBLANK( Text(Request_Type__c ) ),  ISBLANK(  Final_Outcome__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Application of Delivery, Final Outcome, Request Type must be filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_RWD_Tech_Ass_Eva</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;RWD_Technical_AssessmentorEvaluation&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),  ISBLANK( Validation_Completion_Date__c  )) )</errorConditionFormula>
        <errorMessage>Request Name, or Requestor, Validation Completion Date must be filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Real_World_Data_Load</fullName>
        <active>false</active>
        <errorConditionFormula>AND( AND( ISPICKVAL(Request_Status__c,&apos;Archived&apos; )  ,  RecordType.DeveloperName = &apos;Real_World_Data_Load&apos;)  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ),   ISBLANK( 
 Data_Asset__c ),  ISBLANK(  Text( Data_Load_Successful__c)  )) )</errorConditionFormula>
        <errorMessage>Request Name, Requestor, Data Asset, Data Load Successful must be filled in to archive a request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PANG_Valid_Req_Sub_Name_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Submitted__c  , OR( ISBLANK( Name ) , ISBLANK( Requestor__c ) ) )</errorConditionFormula>
        <errorMessage>You must have the Request Name and rRequestor filled in to Submit a request.</errorMessage>
    </validationRules>
</CustomObject>